# milestone_project_trackflow_getmystatsup

./: .gitignore  AGENTS.md  milestone_3_context  milestone_3_ref_file.md  package-lock.json
.agents/: development_rules.md
docs/: architecture_proposal.md  supplier-checklist-verification.md
incident_file_analyzer/: incident_analyzer_context.md
memory-bank/: progress.md  projectbrief.md  techContext.md
scripts/: README.md  (+1 more)
services/: .eval_results.txt  README.md  pyproject.toml  seed.py
services/api/: README.md  constants.py  database.py  main.py  models.py  package-lock.json  package.json
services/api/app/: analysis_bridge.py  main.py
services/api/src/: server.ts
services/api/src/middleware/: errorHandler.ts
services/api/src/routes/: executiveSnapshot.ts  leads.ts
services/api/src/types/: errors.ts
services/data/: suppliers.json
services/inventory-api/: .env.example  README.md  requirements.txt
services/inventory-api/app/: database.py  main.py
services/inventory-api/app/api/: deps.py  router.py
services/inventory-api/app/core/: config.py  security.py
services/inventory-api/app/models/: __init__.py  inventory.py  user.py
services/inventory-api/app/routers/: inventory.py
services/inventory-api/app/routes/: auth.py  users.py
services/inventory-api/app/schemas/: __init__.py  auth.py  inventory.py  user.py
services/inventory-api/app/services/: inventory_service.py  user_service.py
services/inventory-api/tests/: test_inventory.py
services/routes/: suppliers.py
services/tests/: conftest.py  test_seed.py  test_suppliers_api.py
(+141 files in other folders)
